    main/LaAlO3/nk/Chernova.yml
    main/MgAl2O4/nk/Chernova.yml
    main/MgO/nk/Chernova.yml
    main/SrTiO3/nk/Chernova.yml
    other/doped crystals/Nb-SrTiO3/nk/Chernova.yml
    other/mixed crystals/LaAlO3-Sr2TaAlO6/nk/Chernova.yml
    main/MgO/nk/Synowicki-UV.yml
    main/ZrO2/nk/Synowicki-UV.yml
    main/As2S3/nk/Synowicki-UV.yml


============================== 2025-02-23 ==============================

  Re-arrangement for cleaner database file structure:
    - Improved the integration logic between nk and n2 parts of the database.
    - Established a clear separation between research data and manufacturers' data.
    - Reformatted the "Info" section into YAML format, renamed it to about.yml, and placed it within the main database structure.
    - Removed "INFO" paths from catalogs; refer to the appropriate about.yml in the database structure when needed.
  new data
    main/CaF2/nk/Bosomworth-5K.yml
    main/CaF2/nk/Bosomworth-80K.yml
    main/CaF2/nk/Bosomworth-200K.yml
    main/CaF2/nk/Bosomworth-300K.yml
    main/SrF2/nk/Bosomworth-5K.yml
    main/SrF2/nk/Bosomworth-80K.yml
    main/SrF2/nk/Bosomworth-200K.yml
    main/SrF2/nk/Bosomworth-300K.yml
    main/BaF2/nk/Bosomworth-5K.yml
    main/BaF2/nk/Bosomworth-80K.yml
    main/BaF2/nk/Bosomworth-200K.yml
    main/BaF2/nk/Bosomworth-300K.yml
    main/CdF2/nk/Bosomworth-5K.yml
    main/CdF2/nk/Bosomworth-80K.yml
    main/CdF2/nk/Bosomworth-200K.yml
    main/CdF2/nk/Bosomworth-300K.yml
  new data (thanks to Pavel Dmitriev, National University of Singapore, for submitting data in YAML format on GitHub!)
    main/DyScO3/nk/Chernova.yml
  new data (thanks to Marin Tharrault, Université Paris Cité, Paris, France, for submitting data in YAML format!)
    main/PtSe2/nk/Tharrault-1L.yml
    main/PtSe2/nk/Tharrault-2L.yml
    main/PtSe2/nk/Tharrault-3L.yml
    main/PtSe2/nk/Tharrault-4L.yml
    main/PtSe2/nk/Tharrault-5L.yml
    main/PtSe2/nk/Tharrault-6L.yml
    main/PtSe2/nk/Tharrault-7L.yml